fix overflow propblem

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -20,6 +20,7 @@ body,
   margin: 0;
   padding: 0;
   width: 100%;
+  overflow: hidden;
 
   @media (min-width: 960px) {
     font-size: 16px;
@@ -104,7 +105,7 @@ button {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-  font-size: 14px;
+  font-size: 16px;
   width: 100%;
 
   th,
